force-app/bedrock/lib/event/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <label>Event</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Event #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>