force-app/bedrock/lib/event/objects/Event__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Publish</fullName>
                <default>true</default>
                <label>Publish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>