force-app/bedrock/lib/event/objects/Event__c/fields/Payload1__c.field-meta.xml
<CustomField>
    <fullName>Payload1__c</fullName>
    <label>Payload 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>