force-app/bedrock/lib/event/objects/Event__c/fields/Payload2__c.field-meta.xml
<CustomField>
    <fullName>Payload2__c</fullName>
    <label>Payload 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>