force-app/bedrock/lib/event/objects/Event__c/fields/Payload3__c.field-meta.xml
<CustomField>
    <fullName>Payload3__c</fullName>
    <label>Payload 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>