force-app/bedrock/lib/event/objects/Event__c/fields/Payload_Type__c.field-meta.xml
<CustomField>
    <fullName>Payload_Type__c</fullName>
    <label>Payload Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>