force-app/bedrock/lib/event/objects/Event__c/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Thread</label>
    <referenceTo>Thread__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>