force-app/bedrock/lib/event/objects/Event__c/fields/Thread_Key__c.field-meta.xml
<CustomField>
    <fullName>Thread_Key__c</fullName>
    <label>Thread Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>